# approximate-equivariance-in-platonic-transformers

./: .gitignore  README.md  agent.md  meta_main.py  pyproject.toml  setup.sh
configs/: cifar10_deit.yaml  imagenet_dali.yaml  omol.yaml  qm9_approx_sym.yaml  qm9_regr.yaml
docs/: snellius.md
mains/: main_cifar10.py  main_imagenet.py  main_omol.py  main_qm9_approx_sym_regr.py  main_qm9_regr.py
p_transformer/: pyvenv.cfg
platonic_transformers/datasets/: qm9_approx_sym.py
platonic_transformers/models/platoformer/: block.py  conv.py  linear.py  platoformer.py
scripts/: eval_rgc_metrics.py
scripts/jobs/: _job_common.sh  eval_qm9_approx_sym.job  eval_qm9_progressive_relaxation.job  eval_qm9_regr.job  eval_qm9_relaxed_group_convolution.job  eval_rgc_all.job  prepare_qm9.py  prepare_qm9_approx_sym.py  setup_qm9_approx_sym_environment.job  setup_qm9_environment.job  submit_resume_tier1.sh  train_qm9_approx_sym.job  train_qm9_progressive_relaxation.job  train_qm9_regr.job  train_qm9_relaxed_group_convolution.job
tests/: test_progressive_constraint_relaxation.py  test_qm9_approx_sym.py  test_relaxed_group_convolution.py
