[project]
name = "platonic_transformers"
version = "0.0.1"
description = "Platonic Transformers: A Solid Choice For Equivariance"
authors = [
    { name = "Mohammad Mohaiminul Islam", email = "m.islam@uva.nl" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = "MIT"
keywords = [
    'artificial intelligence',
    'deep learning',
    '3D molecules',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
]

dependencies = [
    # --------- Core ML & DS Stack --------- #
    "torch==2.4.0",
    "torchvision",
    "pytorch-lightning",
    "torchmetrics",
    "torch_geometric",
    "timm",

    # --------- Project Specific --------- #
    "rdkit",
    "setuptools",

    # --------- Utilities --------- #
    "wandb",
    "ipdb",
    "ml-collections",
    "pyyaml",
]

[project.optional-dependencies]
imagenet = [
    "nvidia-dali-cuda120 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
]
omol = [
    "fairchem-core ; sys_platform == 'linux'",
    "ase-db-backends ; sys_platform == 'linux'",
    "mendeleev ; sys_platform == 'linux'",
]
knn = [
    "torch-cluster @ https://data.pyg.org/whl/torch-2.4.0+cu124/torch_cluster-1.6.3%2Bpt24cu124-cp312-cp312-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[project.urls]
Homepage = "https://pypi.org/project/platonic_transformers/"
Repository = "https://github.com/niazoys/PlatonicTransformers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["platonic_transformers"]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
